--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-spinkit": "^3.0.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
